# guillotine

./: .gitignore  Cargo.toml  config.sample.json  module.sample.json
.github/workflows/: build.yml  pr.yml
src/: cli.rs  constants.rs  juno_module.rs  logger.rs  main.rs  misc.rs  parser.rs  process_runner.rs  runner.rs
src/cli/: add_process.rs  cli.rs  delete_process.rs  get_module_info.rs  get_process_logs.rs  list_all_processes.rs  list_modules.rs  list_nodes.rs  list_processes.rs  mod.rs  restart_process.rs  start_process.rs  stop_process.rs
src/cli/get_info/: get_module_info.rs  get_process_info.rs  mod.rs
src/exec/: host_runner.rs  juno_module.rs  mod.rs  process.rs  runner.rs
src/host/: juno_module.rs  mod.rs  node.rs  process.rs  runner.rs
src/models/: cli_messages.rs  config_data.rs  config_types.rs  guillotine_message.rs  guillotine_node.rs  host_models.rs  mod.rs  parser.rs  process_data.rs
src/node/: juno_module.rs  mod.rs  module.rs  process.rs  runner.rs
src/utils/: constants.rs  exitable.rs  mod.rs
