[package]
name = "guillotine"
version = "0.1.0"
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde_json = "1.0.50"
serde = "1.0.105"
serde_derive = "1.0.105"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]
