[package]
name = "guillotine"
version = "0.1.0"
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
edition = "2018"
description = "Swift, painless execution (of modules)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
serde_json = "1"
serde = "1"
serde_derive = "1"
juno = "0.1.4-beta"
futures = "0.3.4"
futures-timer = "3.0.2"
lazy_static = "1.4.0"
colored = "1.9.3"
cli-table = "0.3.0"
chrono = "0.4.11"
ctrlc = "3.1.4"
nix = "0.17.0"
winapi = "0.3.8"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]
